--- a/WindowsApp2/WindowsApp2.vbproj
+++ b/WindowsApp2/WindowsApp2.vbproj
@@ -129,6 +129,12 @@
     <Compile Include="bin\Configuracion.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="bin\ventas.Designer.vb">
+      <DependentUpon>ventas.vb</DependentUpon>
+    </Compile>
+    <Compile Include="bin\ventas.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="cIniArray.Designer.vb">
       <DependentUpon>cIniArray.vb</DependentUpon>
     </Compile>
@@ -176,6 +182,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="bin\administraciontbk.resx">
       <DependentUpon>administraciontbk.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="bin\ventas.resx">
+      <DependentUpon>ventas.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
